--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Message of the Day Scroller -->
     <div class="motd-container">
         <div class="motd-text">
-            who u guys voting 4?     </div>
+           SHE HAS DEFROSTED, ITS TIMMMMMMEEEEEEEEEEEEEEEEEEEEEEEEE     </div>
     </div>
 
     <!-- Existing content -->
@@ -593,7 +593,7 @@
 
     <div class="alert">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-   yall i added: fnaf, deepest sword, and I closed the polls. Working on getting pokemon white working in an online ds emulator
+  added a ds emulator download (read instructions)
     </div>
     
           <font color="blue">
