--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
     <div class="alert">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  added a ds emulator download (read instructions)
+ Cat-Nitro is currently undergoing maintenence for the holidays ❄️! So, if the colors are messed up, ill be looking at it and hopefully fix it quickly!
     </div>
     
           <font color="blue">
