--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
     <div class="alert">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  added a ds emulator download (read instructions)
+ undergoing christmas update may look bad :P
     </div>
     
           <font color="blue">
