--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #121212;
+            background-color: #F5F5DC;
             color: white;
         }
         .motd-container {
