--- a/polls.html
+++ b/polls.html
@@ -28,7 +28,7 @@
 <body>
 
     <center><img src="assets/img/logo.png" alt="epicness made by Evaen Shoutsz" style="width:125px;height:125px;">
-        <b><h1 class="flick">Cat-Nitro Chatroom :3/center></h1></b>
+        <b><h1 class="flick">Cat-Nitro Polls</h1></b>
         <center><p><b>vote on polls!</p></b></center>
        <hr style="height:2px;border-width:0;color:blue;background-color:blue">
  
