--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Message of the Day Scroller -->
     <div class="motd-container">
         <div class="motd-text">
-           BREAKING NEWS: people are getting mad the christmas update came 11 days early. Owner responds with, "no one asked for your opinon", and, "Skiding IS A CRIME" as a result to a recent skid attack.  </div>
+        imagine playing on happy nitro 💀💀  </div>
     </div>
 
     <!-- Existing content -->
