--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Message of the Day Scroller -->
     <div class="motd-container">
         <div class="motd-text">
-        imagine playing on happy nitro 💀💀  </div>
+        News: It's officially christmas!! The PE teacher played "All I Want For Christnas Is u" its offical now!  </div>
     </div>
 
     <!-- Existing content -->
