--- a/secret.html
+++ b/secret.html
@@ -57,4 +57,17 @@
     </style>
 </head>
 
+    <body>
+        <div class="motd-container">
+        <div class="motd-text">
+       chat this is a secret if u find password no share  </div>
+    </div>
+
+ <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+shhhhhh!
+    </div>
+    
+        
+    </body>
   
