--- a/secret.html
+++ b/secret.html
@@ -56,7 +56,7 @@
         }
     </style>
 </head>
-
+<link rel="stylesheet" href="assets/css/christmas-css.css">
     <body>
         <div class="motd-container">
         <div class="motd-text">
