--- a/ads.html
+++ b/ads.html
@@ -34,7 +34,8 @@
  
        <center>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8610559705757199"
+     crossorigin="anonymous"></script>
 
 
 <div class="alert">
