Updated added ds emulator
eeeeeeeeeeeeeeeeeeeeee

--- a/polls.html
+++ b/polls.html
@@ -38,12 +38,12 @@
 
 <div class="alert">
     <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    first 10 votes decides the winner. if tie we get 15 votes. i always check polls :3
+    The battle of a CENTURY!
 </div>
 
-<div class="strawpoll-embed" id="strawpoll_61gD9YzjOZw" style="height: 416px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_61gD9YzjOZw" src="https://strawpoll.com/embed/61gD9YzjOZw" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+<div class="strawpoll-embed" id="strawpoll_1Mnwk0PD0n7" style="height: 480px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_1Mnwk0PD0n7" src="https://strawpoll.com/embed/1Mnwk0PD0n7" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
 
-        <link rel="stylesheet" href="assets/css/css.css">
+        <link rel="stylesheet" href="assets/css/thanksgiving-css.css">
 
 </body>
 </html>
