--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
                         <label id="staticrypt-remember-label" class="staticrypt-remember hidden">
                             <input id="staticrypt-remember" type="checkbox" name="remember" />
-                            Click this so u dont have to type in password
+                            Click this so u dont have to type in password again
                         </label>
 
                         <input type="submit" class="staticrypt-decrypt-button" value="Enter Cat-Nitro" />
