--- a/polls.html
+++ b/polls.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-    <center><img src="assets/img/logo.png" alt="epicness made by Evaen Shoutsz" style="width:125px;height:125px;">
+    <center><img src="assets/img/logo.png" alt="me" style="width:125px;height:125px;">
         <b><h1 class="flick">Cat-Nitro Polls</h1></b>
         <center><p><b>vote on polls!</p></b></center>
        <hr style="height:2px;border-width:0;color:blue;background-color:blue">
@@ -43,7 +43,7 @@
 
 <div class="strawpoll-embed" id="strawpoll_1Mnwk0PD0n7" style="height: 480px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_1Mnwk0PD0n7" src="https://strawpoll.com/embed/1Mnwk0PD0n7" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
 
-        <link rel="stylesheet" href="assets/css/thanksgiving-css.css">
+        <link rel="stylesheet" href="assets/css/christmas-css.css">
 
 </body>
 </html>
