--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="staticrypt-html">
     <head>
-        <meta http-equiv="refresh" content="0; catman6112.github.io/PepsiNitro.github.io" />
+        <meta http-equiv="refresh" content="0; https://catman6112.github.io/PepsiNitro.github.io" />
         
         <meta charset="utf-8" />
         <title>Cat-Nitro Entry</title>
